Implement wallet vector valuations

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <main>
     </main>
-    <script src="DeGroot_weighted.js"></script>
+    <script src="wallet_vector.js"></script>
   </body>
 </html>
