--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <main>
     </main>
     <script src="wallet_vector.js"></script>
+    <script src="DeGroot_unweighted.js"></script>
+    <script src="DeGroot_weighted.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
