First order optimal valuations using lp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
@@ -10,9 +11,12 @@
   <body>
     <main>
     </main>
-    <script src="wallet_vector.js"></script>
+    <script src="simplex.js"></script>
+    <script src="constant_valuations.js"></script>
     <script src="DeGroot_unweighted.js"></script>
     <script src="DeGroot_weighted.js"></script>
+    <script src="wallet_vector.js"></script>
+    <script src="lp_optim.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
